# CookiecutterTemplate

./: cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.directory_name}}/: pyproject.toml
