[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"
description = ""
authors = ["Ahmed Alqnatri <alqnatriahmed@gmail.com>"]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
flake8 = "^5.0.3"
autopep8 = "^1.6.0"
pylint = "^2.14.5"
pytest-watch = "^4.2.0"
ptw = "^1.0.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-p no:warnings --pspec --cov --cov--config=.coveragerc test"
testpaths = ["test"]
python_files = ["*test*.py"]
python_functions =["test"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
