[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]

packages = [{ include = "{{cookiecutter.project_name}}", from = "src" }]

[tool.poetry.dependencies]
python = "{{cookiecutter.python_version}}"

[tool.poetry.dev-dependencies]
pytest-watch = "^4.2.0"
pytest-cov = "^3.0.0"
pytest = "^7.1"
flake8 = "^5.0.3"
autopep8 = "^1.6.0"
pylint = "^2.14.5"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-p no:warnings --cov --cov-config=.coveragerc --cov-report=term-missing"
testpaths = ["test"]
python_files = ["*test*.py"]
python_functions =["test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
